--- a/index.html
+++ b/index.html
@@ -130,27 +130,27 @@
       >
         <div class="form-input-section">
           <label for="firstName">First Name</label>
-          <input id="firstName" type="text" />
+          <input id="firstName" type="text" required />
         </div>
 
         <div class="form-input-section">
           <label for="lastName">Last Name</label>
-          <input id="lastName" type="text" />
+          <input id="lastName" type="text" required />
         </div>
 
         <div class="form-input-section">
           <label for="email">Email</label>
-          <input id="email" type="email" />
+          <input id="email" type="email" required />
         </div>
 
         <div class="form-input-section">
           <label for="phoneNumber">Phone Number</label>
-          <input id="phoneNumber" type="tel" />
+          <input id="phoneNumber" type="tel" required />
         </div>
 
         <div class="form-input-section">
           <label for="subject">Comments</label>
-          <input id="subject" type="text" />
+          <input id="subject" type="text" required />
         </div>
 
         <div class="form-input-section">
