--- a/index.html
+++ b/index.html
@@ -198,16 +198,16 @@
 
     <footer class="eses-footer">
       <a class="icons" href="https://www.facebook.com">
-        <img src="/facebook.svg" alt=""
+        <img src="/facebook.svg" alt="facebook-icon"
       /></a>
       <a class="icons" href="https://instagram.com"
-        ><img src="/instagram.svg" alt=""
+        ><img src="/instagram.svg" alt="instagram-icon"
       /></a>
       <a class="icons" href="https://twitter.com"
-        ><img src="/twitter.svg" alt=""
+        ><img src="/twitter.svg" alt="twitter-icon"
       /></a>
       <a class="icons" href="https://pinterest.com"
-        ><img src="/pinterest.svg" alt=""
+        ><img src="/pinterest.svg" alt="pinterest-icon"
       /></a>
     </footer>
   </body>
